--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.13.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-countup": "^6.4.2",
@@ -22,9 +25,11 @@
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
