--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dompurify": "^3.0.5",
     "file-saver": "^2.0.5",
     "formik": "^2.4.3",
     "react": "^18.2.0",
